gobmkida/g3/store_persistent_reading_cache
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_persistent_reading_cache/src/engine/persistent.c:921:34: error: use of undeclared identifier 'unk_9D420C'
get_move_from_stack( 0, ( int *)&unk_9D420C + v12 * 119 + 114, persistent_reading_cache[v12].move_color); 
                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_persistent_reading_cache/src/engine/persistent.c:924:34: error: use of undeclared identifier 'unk_9D420C'
get_move_from_stack( 1, ( int *)&unk_9D420C + v40 + 115, &persistent_reading_cache[0].move_color[v40 + 1]); 
                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_persistent_reading_cache/src/engine/persistent.c:927:34: error: use of undeclared identifier 'unk_9D420C'
get_move_from_stack( 2, ( int *)&unk_9D420C + v40 + 116, &persistent_reading_cache[0].move_color[v40 + 2]); 
                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_persistent_reading_cache/src/engine/persistent.c:930:34: error: use of undeclared identifier 'unk_9D420C'
get_move_from_stack( 3, ( int *)&unk_9D420C + v40 + 117, &persistent_reading_cache[0].move_color[v40 + 3]); 
                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_persistent_reading_cache/src/engine/persistent.c:933:34: error: use of undeclared identifier 'unk_9D420C'
get_move_from_stack( 4, ( int *)&unk_9D420C + v40 + 118, &persistent_reading_cache[0].move_color[v40 + 4]); 
                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_persistent_reading_cache/src/engine/persistent.c:952:4: error: use of undeclared identifier 'byte_A2CADF'
|| byte_A2CADF[v22] != 3 && v23[19] == 1 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_persistent_reading_cache/src/obj/1/persistent.o] Error 1
